# Diplom

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
learning_platform/: __init__.py  admin.py  apps.py  models.py  models_backup.py  permissions.py  serializers.py  urls.py  views.py
learning_platform/migrations/: 0001_initial.py
presentation_site/: README.md  index.html  script.js  style.css
tests/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
tests/migrations/: 0001_initial.py
users/: models.py  permissions.py  tests.py  urls.py  views.py
users/management/commands/: create_users.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py
